--- a/help/Rocketdock Enhanced Settings.html
+++ b/help/Rocketdock Enhanced Settings.html
@@ -3951,7 +3951,7 @@ will be displayed. Clicking the same expand button again will roll the panel bac
 
 
 
-<img style="width: 405px; height: 352px;" alt="properties" title="properties" src="propertiesPanelLarge.png"><br>
+<img alt="properties" title="properties" src="extra-configuration.jpg" height="1019" width="1044"><br>
 
 
 
@@ -4038,7 +4038,8 @@ available for Steamydock.</span></li>
 
 
 
-  <li><span style="font-weight: bold;">Second App to run.</span> When an application has been set within this field SteamyDock will run this program after the main program has started.<span style="font-weight: bold;">&nbsp;</span></li>
+  <li><span style="font-weight: bold;">Second App to run.</span> When an application has been set within this field SteamyDock will run this program after the main program has started.<span style="font-weight: bold;">&nbsp;It 
+  can be configured to run beforehand or afterwards.</span></li>
 
 
   <li><span style="font-weight: bold;">Terminate App.</span> When an
@@ -5381,322 +5382,13 @@ The tool in high-contrast mode on Windows 10.</span><br>
 
 
 
-<p style="page-break-before: always;"><span style="font-weight: bold;"><a name="Debugging"></a>Debugging</span></p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<p style="page-break-before: always;">The final option &nbsp;in the right click menu is to turn Debugging ON</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<p style="page-break-before: always;">This runs a separate
-binary,&nbsp;the persistentDebug.exe (an additional binary provided with this tool)
-is only run when you turn debugging ON. I suggest you do NOT use this
-utility unless you have a problem that is not easy to&nbsp; diagnose.&nbsp;It is
-a separate exe that my program will talk to when in debug mode, sending the program's
-subroutine entry points and other debug data to that window so you can see what is going on. When
-you run it the first time, your anti-malware tool such as malwarebytes may well flag it as a possible malware. It is <span style="text-decoration: underline;">NOT</span>. Anti-malware tools do not like VB6 binaries nor programs&nbsp;talking to each other using
-shared memory. The combination is bound to generate a false positive.&nbsp;
-
-
-
-
-
-
-
-
-
-
-
-
-
-</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-The code for the&nbsp;persistentDebug program was provided by Elroy on
-the VBforums and you can have a look at the source any time. For the
-moment, if you want it to run, bring it back from quarantine and add an
-exclusion to your anti-malware tool!<br>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<br>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-The debug tool &nbsp;is a runtime debugger showing all the functions
-and routines that have been called by the program. I have debugged as
-many errors that I can but some errors only appear at runtime. If you
-have an undiagnosed program problem use the debugger to send me a list
-of the recent program entry points as listed in the debugger as well as
-any error message that the program displays.<br>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<br>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<img style="width: 485px; height: 488px;" alt="runtime debugger" title="runtime debugger" src="../../dockSettings/help/docksDebug.jpg"><br>
-
-
-
-
-
-
-
-
-
-
-
-
-<span style="font-weight: bold;">
-
-
-
-
-
-Fig 26. The Debug Window that is shown when you select debug mode.</span><br>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<br>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-To close the debug window simply select the same debug option in the right click menu and the debug window will close.<br clear="all">
+<p style="page-break-before: always;"><span style="font-weight: bold;"><a name="Debugging"></a></span></p>
+<img alt="reszed window" height="1019" src="resizedWindow.jpg" width="1044"><br>
+<br><strong>Fig 26.</strong> A screenshot of the tool window resized to 160%. If 
+you drag the bottom right corner and resize the window, the window and 
+everything in it will be redrawn to a larger size.<br>This is an accessibility 
+feature and a boon to those with 4K screens and larger. No need to enable 
+scaling.<br><br>
 
 
 
@@ -6788,7 +6480,7 @@ Krool on the VBForums for his impressive common control replacements</li>
 
 
 
-  <li>' KPD-Team 1999 http://www.allapi.net/&nbsp; Recursive search</li>
+  <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; KPD-Team 1999 http://www.allapi.net/&nbsp; Recursive search</li>
 
 
 
@@ -8625,7 +8317,7 @@ Rocketdock. See SteamyDock in operation below.<br>
 
 
 
-<img style="width: 1280px; height: 248px;" title="Showing Steamydock in operation on Windows 10" src="../../SteamyDock/help/steamydock.jpg" alt="Showing Steamydock in operation on Windows 10"><span style="font-weight: bold;">Fig 31. Showing Steamydock in operation on Windows 10.</span>
+<img style="width: 1280px; height: 248px;" title="Showing Steamydock in operation on Windows 10" src="../../SteamyDock/help/steamydock.jpg" alt="Showing Steamydock in operation on Windows 10"><span style="font-weight: bold;"><br>Fig 31. Showing Steamydock in operation on Windows 10.</span>
 <h3><a name="Licence_"></a>Licence:</h3>
 
 
