subclass the font form and centre it on the display
o some test changes re: embedded icons
o resizing of the software form fixed
o small help changes

--- a/help/Rocketdock Enhanced Settings.html
+++ b/help/Rocketdock Enhanced Settings.html
@@ -2020,7 +2020,9 @@ Fig 14a. Confirmation Pop-up </span><br>
 If you want&nbsp;to proceed without these continuous confirmation
 pop-ups then you can disable them. Click on the small check box toward
 the bottom of the utility, one that is marked "Toggle info. dialogs".
-When that is un-ticked the pop-up messages will no longer appear.<br>
+When that is un-ticked the pop-up messages will no longer appear. The message 
+	boxes are resizable by dragging the right hand corner, so the message boxes 
+	can be resized for larger size screens.<br>
 
 
 
@@ -3639,7 +3641,9 @@ requires a default folder to operate within.</li>
 
 
 <div style="margin-left: 40px;">The&nbsp;<strong style="font-weight: normal;">Start In</strong> field can also contain&nbsp;<small style="font-weight: bold;"><span style="font-family: Courier New;">%userprofile%</span></small> to allow the target to
-handle and resolve the path to the user's own profile, eg.&nbsp;<small style="font-weight: bold;"><span style="font-family: Courier New;">%userprofile%</span></small>\Documents\Music</div>
+handle and resolve the path to the user's own profile, eg.&nbsp;<small style="font-weight: bold;"><span style="font-family: Courier New;">%userprofile%</span></small>\Documents\Music<br>
+	<br>If you double-click on the <strong>Start In </strong>Field it will auto 
+	populate with the folder in the <strong>target field</strong>.</div>
 
 
 
@@ -3679,7 +3683,7 @@ program or image.&nbsp;
 
 
 
-<strong></strong></div>
+<strong><br><br></strong></div>
 
 
 
@@ -5388,7 +5392,7 @@ The tool in high-contrast mode on Windows 10.</span><br>
 you drag the bottom right corner and resize the window, the window and 
 everything in it will be redrawn to a larger size.<br>This is an accessibility 
 feature and a boon to those with 4K screens and larger. No need to enable 
-scaling.<br><br>
+scaling on the Windows desktop.<br><br>
 
 
 
@@ -6544,174 +6548,7 @@ Krool on the VBForums for his impressive common control replacements</li>
 
 Built using: VB6, MZ-TOOLS 3.0, CodeHelp Core IDE Extender Framework
 2.2 &amp; Rubberduck 2.4.1 and Krool's replacement Controls.
-<h3>VB.NET Version Credits:</h3>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shuja
-Ali (codeguru.com) for his settings.ini code.</li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-
-  <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Punklabs
-for the original inspiration and for s, Skunkie in particular.</li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-
-
-
-  
-
-
-
-</ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-Built using: VB.NET 2010, initially migrated from VB6 using VB Express (.NET 2008).<br>
+<br>
 
 
 
@@ -6837,7 +6674,7 @@ but a few who have responded or commented.<br>
 
 
 Finally, credit to Harry Whitfield, Emeritus Professor, University of
-Newcastle upon Tyne, for helping me with ideas, testing and being a
+	Sheffield Uni. for helping me with ideas, testing and being a
 sounding board for my ideas. I would have done none of this without him
 as he is my programming Yoda and my inspiration to do better.<br>
 
