Help updated to account for drag/drop to dock, also
o created CHM version of the help
o alignment of code
o missing help images for CHM

--- a/help/Rocketdock Enhanced Settings.html
+++ b/help/Rocketdock Enhanced Settings.html
@@ -380,6 +380,13 @@ The icon folders are displayed in a treeview, the icons are displayed
 as thumbnails. A preview area (bottom left) is available for viewing an icon in
 greater detail and a properties panel exists to show the icon details.
 Various buttons and controls allow the user to select icons and to save any icon changes as required.</p>
+<p>First thing to note is that in the boottom right hand corner is a drag icon 
+that allows you to resize the whole window. You can drag the window to a new 
+larger size and all the controls will automatically resize to match. The program 
+will remember the size you have chosen and will restart at the selected size. This is an accessibility 
+feature and a boon to those with 4K screens and larger. No need to enable 
+scaling on the Windows desktop.</p>
+<p></p>
 
 
 
@@ -1853,7 +1860,10 @@ hide the dock map. If you click and hold on any thumbnail in the map, a
 'drag' icon will appear showing you that the current icon is ready for dragging
 to another position in the map. You can drag an icon from the icon thumbnail display
 directly to any
-existing location in the dock map.<br>
+existing location in the dock map.<br><br>You can also drag an application 
+	directly from the Windows desktop to the map. If the application binary has 
+	an embedded icon then the tool will automatically extract the largest icon 
+	and display that.<br>
 
 
 
@@ -5524,7 +5534,7 @@ scaling on the Windows desktop.<br><br>
 
 
 
-<img style="width: 343px; height: 308px;" alt="Licensing" title="Licensing" src="../../dockSettings/help/docksLicence.jpg"><br>
+<img alt="Licensing" title="Licensing" src="licence.jpg" height="308" width="343"><br>
 
 
 
@@ -8154,7 +8164,7 @@ Rocketdock. See SteamyDock in operation below.<br>
 
 
 
-<img style="width: 1280px; height: 248px;" title="Showing Steamydock in operation on Windows 10" src="../../SteamyDock/help/steamydock.jpg" alt="Showing Steamydock in operation on Windows 10"><span style="font-weight: bold;"><br>Fig 31. Showing Steamydock in operation on Windows 10.</span>
+<img title="Showing Steamydock in operation on Windows 10" src="steamydock.jpg" alt="Showing Steamydock in operation on Windows 10" height="248" width="1280"><span style="font-weight: bold;"><br>Fig 31. Showing Steamydock in operation on Windows 10.</span>
 <h3><a name="Licence_"></a>Licence:</h3>
 
 
